@@ -32,7 +32,8 @@ Version 1.0.8.7
      * Some color changes for AutoIt (BenBE)
      * Added support for basic include directive processing for AutoIt (BenBE)
      * Added support for ::-style labels as comments (SF#2947393, BenBE)
-     * Removed backslash as Escape Char in T-SQL (SF2939199, Bruno Braga)
+     * Removed backslash as Escape Char in T-SQL (SF#2939199, Bruno Braga)
+     * Added Nested Comments Support for Haskell (SF#2922317, BenBE)
 Version 1.0.8.6
   -  Added language files
      * Clojure (Jess Johnson)
